//
//  ImageFeedUITests.swift
//  ImageFeedUITests
//
//  Created by Эдуард Бухмиллер on 09.06.2023.
//

import XCTest
import WebKit
@testable import ImageFeed

class Image_FeedUITests: XCTestCase {
    private let app = XCUIApplication()
    
    private let login = ""
    private let password = ""
    private let nameLastname = " "
    private let username = ""
    
    override func setUpWithError() throws {
        continueAfterFailure = false
        app.launch()
    }
    
    func testAuth() throws {
        
        app.buttons["Authenticate"].tap()
        
        let webView = app.webViews["UnsplashWebView"]
        XCTAssertTrue(webView.waitForExistence(timeout: 5))
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 5))
        
        loginTextField.tap()
        loginTextField.typeText(login)
        webView.swipeUp()
        
        webView.tap()
        
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 5))
        
        passwordTextField.tap()
        passwordTextField.typeText(password)
        webView.swipeUp()
        
        webView.tap()
        
        webView.buttons["Login"].tap()
        
        sleep(5)
        
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        
        XCTAssertTrue(cell.waitForExistence(timeout: 10))
    }
    
    func testFeed() throws {
        
        if app.buttons["Authenticate"].exists {
            performLogin()
            sleep(3)
        }
        
        let tablesQuery = app.tables
    
        let cellToLike = tablesQuery.children(matching: .cell).element(boundBy: 1)
        
        let likeButton = cellToLike.buttons["likeBtn"]
        likeButton.tap()
        
        sleep(5)
        
        let likeBtn = cellToLike.buttons["likeBtn"]
        likeBtn.tap()
        
        sleep(5)
        
        cellToLike.tap()
        
        sleep(10)
        
        let image = app.scrollViews.images.element(boundBy: 0)
        
        image.pinch(withScale: 3, velocity: 1)
        
        image.pinch(withScale: 0.5, velocity: -1)
        
        let navBackButtonWhiteButton = app.buttons["backButton"]
        navBackButtonWhiteButton.tap()
    }
    
    func testProfile() throws {
        if app.buttons["Authenticate"].exists {
            performLogin()
            sleep(3)
        }
        
        app.tabBars.buttons.element(boundBy: 1).tap()
        
        XCTAssertTrue(app.staticTexts[nameLastname].exists)
        XCTAssertTrue(app.staticTexts[username].exists)
        
        app.buttons["logout button"].tap()
        
        app.alerts["Пока, пока!"].scrollViews.otherElements.buttons["Да"].tap()
    }
    
    private func performLogin() {
        app.buttons["Authenticate"].tap()
        
        let webView = app.webViews["UnsplashWebView"]
        
        let loginTextField = webView.descendants(matching: .textField).element
        
        loginTextField.tap()
        loginTextField.typeText(login)
        webView.swipeUp()
        
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        
        passwordTextField.tap()
        passwordTextField.typeText(password)
        webView.swipeUp()
        
        webView.buttons["Login"].tap()
    }
    
}
